<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editImageRotate"
        android:icon="@drawable/ic_rotate_right_24dp"
        android:title="@string/edit_image_rotate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ic_flip_24"
        android:icon="@drawable/ic_flip_24dp"
        android:title="@string/edit_image_flip"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/editImageFlipHorizontally"
                android:title="@string/edit_image_flip_horizontally" />
            <item
                android:id="@+id/editImageFlipVertically"
                android:title="@string/edit_image_flip_vertically" />
        </menu>
    </item>
    <item
        android:id="@+id/editImageDone"
        android:title="@string/button_done"
        app:showAsAction="always" />

</menu>
