<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.report.fragments.ReportCategoryFragment">

    <ScrollView
        android:id="@+id/reportCategoryScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/report_problem_with_post"
                android:textColor="?android:textColorPrimary"
                android:textSize="?attr/status_text_medium" />

            <com.keylesspalace.tusky.components.report.view.ReportCategoryRadioButton
                android:id="@+id/report_category_spam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                app:categoryDescription="@string/report_category_spam_description"
                app:categoryTitle="@string/report_category_spam_title" />

            <com.keylesspalace.tusky.components.report.view.ReportCategoryRadioButton
                android:id="@+id/report_category_legal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="6dp"
                app:categoryDescription="@string/report_category_legal_description"
                app:categoryTitle="@string/report_category_legal_title" />

            <com.keylesspalace.tusky.components.report.view.ReportCategoryRadioButton
                android:id="@+id/report_category_violation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="6dp"
                app:categoryDescription="@string/report_category_violation_description"
                app:categoryTitle="@string/report_category_violation_title" />

            <com.keylesspalace.tusky.components.report.view.ReportCategoryRadioButton
                android:id="@+id/report_category_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="6dp"
                app:categoryDescription="@string/report_category_other_description"
                app:categoryTitle="@string/report_category_other_title" />

        </LinearLayout>

    </ScrollView>

    <com.keylesspalace.tusky.view.BackgroundMessageView
        android:id="@+id/reportCategoryStatusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/reportCategoryLoadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/TuskyButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonContinue" />

    <Button
        android:id="@+id/buttonContinue"
        style="@style/TuskyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
