<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".components.report.fragments.ReportStatusesFragment">

    <View
        android:id="@+id/checkMark"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/report_success_background"
        app:layout_constraintBottom_toTopOf="@id/textReported"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/checkMark"
        app:layout_constraintEnd_toEndOf="@id/checkMark"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="@id/checkMark"
        app:layout_constraintTop_toTopOf="@id/checkMark"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/ic_check_24dp"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/textReported"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.1"
        android:padding="24dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="?attr/status_text_large"
        app:layout_constraintBottom_toTopOf="@id/buttonMute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkMark"
        app:layout_constraintWidth_percent="0.9"
        tools:text="@string/report_sent_success" />

    <Button
        android:id="@+id/buttonMute"
        style="@style/TuskyButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="@dimen/min_report_button_width"
        android:text="@string/action_mute"
        app:layout_constraintBottom_toTopOf="@id/buttonBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textReported" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressMute"
        style="@style/Widget.Material3.CircularProgressIndicator.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/buttonMute"
        app:layout_constraintEnd_toEndOf="@id/buttonMute"
        app:layout_constraintStart_toStartOf="@id/buttonMute"
        app:layout_constraintTop_toTopOf="@id/buttonMute" />

    <Button
        android:id="@+id/buttonBlock"
        style="@style/TuskyButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:minWidth="@dimen/min_report_button_width"
        android:text="@string/action_block"
        app:layout_constraintBottom_toTopOf="@id/buttonDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonMute"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBlock"
        style="@style/Widget.Material3.CircularProgressIndicator.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/buttonBlock"
        app:layout_constraintEnd_toEndOf="@id/buttonBlock"
        app:layout_constraintStart_toStartOf="@id/buttonBlock"
        app:layout_constraintTop_toTopOf="@id/buttonBlock" />

    <Button
        android:id="@+id/buttonDone"
        style="@style/TuskyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="@dimen/min_report_button_width"
        android:text="@string/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBlock"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>
